Fix login button z-index

--- a/app/assets/stylesheets/styles.styl
+++ b/app/assets/stylesheets/styles.styl
@@ -31,6 +31,7 @@ h1, h2, h3, h4
 
 // UI ------------------------------------------------------------------------
 .button
+  z-index: 1
   position: absolute
   top: 50%; left: 50%
   margin: -37px 0 0 -157px
